# timepoint-clockchain

./: .env.example  Dockerfile  README.md  TIMEPOINT_CLOCKCHAIN_SUITE_INTEGRATION_ANALYSIS.md  agents.md  bandit_results.json  docs.json  entrypoint.sh  pyproject.toml  semgrep_results.json
app/: main.py  mcp_server.py
app/api/: __init__.py  agents.py  generate.py  graph.py  ingest.py  moments.py  propose.py  public.py  tdf_export.py
app/core/: auth.py  config.py  db.py  graph.py  jobs.py  model_selector.py  multi_writer.py  rate_limit.py  scoring.py  tdf.py  tdf_bridge.py  url.py
app/models/: schemas.py
app/workers/: daily.py  expander.py  image_backfill.py  iterator.py  judge.py  renderer.py
data/: seeds.json  seeds.jsonl
docs/: SAST-AUDIT.md  UPDATE-FROM-FLASH.md
migrations/: 001_add_source_type.sql  002_backfill_tdf_hash.py  003_add_image_url.py
scripts/: backfill_tdf_hash.py  migrate_graph_json.py
tests/: conftest.py  test_api_moments.py  test_daily.py  test_edges.py  test_expander.py  test_graph.py  test_judge.py  test_mcp_server.py  test_multi_writer.py  test_propose_challenge.py  test_public_api.py  test_rate_limit.py  test_scoring.py  test_tdf.py  test_tdf_integration.py  test_url.py
