[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "timepoint-clockchain"
version = "0.1.0"
description = "TIMEPOINT Clockchain — spatiotemporal graph index and autonomous content orchestrator"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.6.0",
    "httpx>=0.28.0",
    "asyncpg>=0.29.0",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-asyncio",
    "httpx",
]

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
